--- a/RASPtableGM.html
+++ b/RASPtableGM.html
@@ -51,7 +51,8 @@
 	<!-- BUT *DON'T* CHANGE THESE UNLESS YOU KNOW WHAT YOU'RE DOING :-) -->
 
 	<!-- NOTE: Order is important here! -->
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
+	<script type="text/javascript"
+src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyAWSTQ0Y1MbC893ogrrNGyesci2UO8Q_IM"></script>
 	<script type="text/javascript" src="paramList.js"></script>
 	<script type="text/javascript" src="corners.js"></script>
 	<script type="text/javascript" src="soundings.js"></script>
