Added title that changes according to chosen param

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>M&eacute;t&eacute;o-parapit</title>
-
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+    <div id="site_title"></div>
     <div id="menu_wind" class="mymenu" style="display:none">
       <a class="menu_item_wind" href="#" id="sfcwind">10m</a>
       <a class="menu_item_wind not-active" href="#">500m</a>
